--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY='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'
+OPENAI_API_KEY='sk-EDdjUx3slnjkhujgbhmk,T3BlbkFJBV2KDult6XwwqtNnwNsR'
